--- a/hj-platform-app/build.gradle
+++ b/hj-platform-app/build.gradle
@@ -8,6 +8,11 @@ group = 'com.hj'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+dependencyManagement {
+    imports {
+        mavenBom 'com.hj:hj-platform-parent:0.0.1-SNAPSHOT'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -16,14 +21,17 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.aspectj:aspectjweaver:1.9.9.1'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.security:spring-security-core:6.0.0-M5'
     runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     testImplementation 'io.projectreactor:reactor-test'
 
     // second-party library
