--- a/hj-platform-app/src/main/resources/config/application-common.yml
+++ b/hj-platform-app/src/main/resources/config/application-common.yml
@@ -5,6 +5,9 @@ spring:
       username: hj-developer
       password: 123456
     url: jdbc:mysql://localhost:3308/hj-mold
+  devtools:
+    restart:
+      enabled: false
 logging:
   level:
-    com.ejums: DEBUG
+    com.hj: INFO
