--- a/hj-platform-app/src/main/resources/config/application.yml
+++ b/hj-platform-app/src/main/resources/config/application.yml
@@ -1,3 +1,14 @@
 spring:
   profiles:
     include: common
+  webflux:
+    base-path: /app
+  main:
+    allow-bean-definition-overriding: true
+server:
+  port: 19091
+  servlet:
+    context-path: /app
+system:
+  config:
+    debug: true
