--- a/hj-platform-parent/build.gradle
+++ b/hj-platform-parent/build.gradle
@@ -1,12 +1,17 @@
 plugins {
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
-	id 'maven-publish'
+	id "io.spring.dependency-management" version "1.0.11.RELEASE"
+	id "java"
+	id "maven-publish"
+}
+ext {
+	springBootVersion = "3.0.0-M3"
+	springFramworkVersion = "6.0.0-M5"
+	springCloudVersion = "3.0.0-M3"
 }
 
-group = 'com.hj'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+group = "com.hj"
+version = "0.0.1-SNAPSHOT"
+sourceCompatibility = "17"
 
 configurations {
 	compileOnly {
@@ -16,20 +21,38 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencyManagement{
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.0-M3"
+	}
 	dependencies {
-		dependency "org.springframework.boot:spring-boot-starter-webflux:3.0.0-M3"
+		dependency "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-data-redis-reactive:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
+		dependency "org.springframework.security:spring-security-core:${springFramworkVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-aop:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-data-redis-reactive:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-data-r2dbc:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-oauth2-client:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springBootVersion}"
+		dependency "org.springframework.boot:spring-boot-starter-security:${springBootVersion}"
+		dependency "org.springframework.cloud:spring-cloud-starter-gateway:${springCloudVersion}"
+		dependency "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 		dependency "org.junit.jupiter:junit-jupiter:5.8.2"
 		dependency "org.mockito:mockito-core:4.4.0"
-		dependency "org.assertj:assertj-core:3.22.0"
 		dependency "org.projectlombok:lombok:1.18.22"
+		dependency "dev.miku:r2dbc-mysql:0.8.2.RELEASE"
+		dependency "com.fasterxml.jackson.core:jackson-annotations:2.13.3"
 	}
 }
 
-tasks.named('test') {
+tasks.named("test") {
 	useJUnitPlatform()
 }
 
