oauth2登录和用户信息获取添加

--- a/hj-platform-domain/build.gradle
+++ b/hj-platform-domain/build.gradle
@@ -43,6 +43,14 @@ test {
 publishing{
     publications{
         Maven(MavenPublication){
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
             artifact sourcesJar
             from components.java
         }
