--- a/hj-platform-uac/build.gradle
+++ b/hj-platform-uac/build.gradle
@@ -1,8 +1,10 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.0-M3'
+    id 'org.springframework.boot' version '3.0.0-M4'
+    id "org.sonarqube" version "3.4.0.2513"
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
+
 
 group = 'com.hj'
 version = '0.0.1-SNAPSHOT'
@@ -13,6 +15,15 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "ejums_hj-platform"
+        property "sonar.organization", "ejums"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
 
 repositories {
     mavenCentral()
@@ -31,6 +42,7 @@ dependencyManagement {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
